# TACO

./: .gitignore  agent_interface.py  compress_dataset.sh  config.yaml  pyproject.toml  run_pipeline.py
agent/: config.py  context.py  dispatch.py  graph.py  invoke.py  model.py  utils.py  workflow_modes.py
agent/components/: executor.py  planner.py
agent/tools/: __init__.py  bash.py  end_task.py  python.py
agent/tools/filters/: base_model_filter.py  discipline_filter.py  fine_filter.py  rough_filter.py
agent/tools/subagents/: base_model_filter_agent.py  discipline_discovery_agent.py  fine_filter_agent.py  rough_filter_agent.py
agent/tools/subagents_prompt/: base_model_filter_prompt.py  discipline_discovery_prompt.py  fine_filter_prompt.py  rough_filter_prompt.py
ds_config/: ds_config_0.5b.json  ds_config_1.5b.json  ds_config_3b.json  ds_config_7b.json
finetune/: dataset.py  judger.py  judger_prompt.py  train.py
finetune/test/: LIVECODEBENCH.md  README.md  __init__.py  test_verify.py
finetune/test/evaluators/: __init__.py  _bigcodebench_sandbox.py  _cruxeval_sandbox.py  _humaneval_sandbox.py  bigcodebench_evaluator.py  cruxeval_input_evaluator.py  cruxeval_output_evaluator.py  humaneval_evaluator.py  livecode_evaluator.py  math_evaluator.py  medqa_evaluator.py  mmlu_evaluator.py  physics_evaluator.py  (+1 more)
preprocess/: add_embeddings.py  add_ids.py  preprocess.py
utils/: _filter_oracle.py  format_tulu.py  parquet2json.py  read_parquet.py  seed_similarity_filter.py  test_connection.py
utils/scripts/: monitor_seed_sim.sh  run_seed_sim.sh  stop_seed_sim.sh
(+20 files in other folders)
