[project]
name = "dataset-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.7.0",
    "deepspeed>=0.18.4",
    "faiss-cpu>=1.13.2",
    "gradio>=6.2.0",
    "hdbscan>=0.8.42",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "mpi4py>=4.1.1",
    "ndg-httpsclient>=0.5.1",
    "numpy>=2.2.6",
    "parquet-tools>=0.2.16",
    "pyarrow>=22.0.0",
    "pyasn1>=0.6.1",
    "pyopenssl>=25.3.0",
    "pypdf>=6.5.0",
    "pyyaml>=6.0.3",
    "requests[security]>=2.32.5",
    "sentence-transformers>=5.2.0",
    "tensorboard>=2.20.0",
    "vllm>=0.14.1",
    "word2number>=1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
